lab9/tests/good/t1.al
int sum(void x, boolean b[]);

int sum(void s, boolean a[])
begin
  
end