lab9/tests/bad/function_call_after_declaration.al
int main(void);

int main(void)
begin

end

main();